# hardware-search-rest

./: CMakeLists.txt  README.md  httplib.h  main.cpp
data/market1/: cases  coolers  cpus  gpus  mobos  psus  ram  ssds
data/market2/: cases  coolers  cpus  gpus  mobos  psus  ram  ssds
data/market3/: cases  coolers  cpus  gpus  mobos  psus  ram  ssds
hpp/: cooler.hpp  cpu.hpp  engine.hpp  gpu.hpp  market.hpp  motherboard.hpp  pc_case.hpp  power_supply.hpp  ram.hpp  rest_server.hpp  sector.hpp  ssd.hpp  util.hpp
hpp/json/: criterium.hpp  parser.hpp  query_criterium.hpp
hpp/query/: cooler_query.hpp  cpu_query.hpp  gpu_query.hpp  iquery.hpp  motherboard_query.hpp  pc_case_query.hpp  psu_query.hpp  ram_query.hpp  ssd_query.hpp
src/: cooler.cpp  cpu.cpp  engine.cpp  gpu.cpp  market.cpp  motherboard.cpp  parser.cpp  pc_case.cpp  power_supply.cpp  ram.cpp  rest_server.cpp  ssd.cpp  util.cpp
